Fixed overflow in parameters and data-vis

--- a/pipeline-calculator/src/app/app.component.css
+++ b/pipeline-calculator/src/app/app.component.css
@@ -19,6 +19,7 @@
 
 .left {
     width: 85%;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     margin-right: 5px;
@@ -34,17 +35,20 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 5px;
+    overflow: hidden;
 }
 
 .data-vis {
     height: 100%;
     border-radius: 5px;
+    overflow-y: auto;
 }
 
 .parameters {
     width: 60%;
     border-radius: 5px;
     margin-right: 5px;
+    overflow-y: auto;
 }
 
 .export-options {
